fixed the navbar text spacing

--- a/CSS_files/index.css
+++ b/CSS_files/index.css
@@ -40,7 +40,7 @@ nav{
 .nav-links{
   display: flex;
   justify-content: space-around;
-  width: 30%;
+  width: clamp(45%,8vw,30%);
   z-index: 101;
 }
 .nav-links li{
@@ -51,7 +51,7 @@ nav{
   text-decoration: none;
   letter-spacing: 3px;
   font-weight: bold;
-  font-size: 14px;
+  font-size: clamp(12px, 8vw, 15px);
 }
 .burger{
   display: none;
@@ -64,55 +64,8 @@ nav{
   margin: 5px;
   transition: all 0.3s ease;
 }
-@media screen and (max-width:500px){
-  body{
-    overflow-x: hidden;
-  }
-  .nav-links{
-    position: absolute;
-    right: 0px;
-    height: 90vh;
-    top: 8vh;
-    background-color: #292929;
-    flex-direction: column;
-    align-items: center;
-    width: 0%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-    filter: drop-shadow(0rem 1rem 0.5rem rgba(0,0,0,0.5));
-  }
-  .nav-links li{
-    opacity: 0;
-  }
-  .burger{
-    display: block;
-  }
-}
-@media screen and (max-width:400px){
-  body{
-    overflow-x: hidden;
-  }
-  .nav-links{
-    position: absolute;
-    right: 0px;
-    height: 90vh;
-    top: 8vh;
-    background-color: #292929;
-    flex-direction: column;
-    align-items: center;
-    width: 0%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-    filter: drop-shadow(0rem 1rem 0.5rem rgba(0,0,0,0.5));
-  }
-  .nav-links li{
-    opacity: 0;
-  }
-  .burger{
-    display: block;
-  }
-}
-@media screen and (max-width:300px){
+
+@media screen and (max-width:768px){
   body{
     overflow-x: hidden;
   }
